# grxxt

./: Cargo.toml  README.md  greetd-config.toml  grxxt.toml  install.sh
src/: app.rs  avatar.rs  config.rs  greetd.rs  main.rs  power.rs  theme.rs  ui.rs
