[package]
name = "grxxt"
version = "0.1.0"
edition = "2021"
description = "Brutalist greetd greeter"
authors = ["sandman"]

[dependencies]
iced = { version = "0.13", features = ["tokio", "advanced", "image"] }
greetd_ipc = { version = "0.10", features = ["sync-codec"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "sync"] }
nix = { version = "0.29", features = ["user", "term"] }
shell-words = "1.1"
chrono = "0.4"

[profile.release]
lto = true
strip = true
