[package]
name = "grxxt"
version = "0.1.0"
edition = "2021"
description = "Brutalist greetd greeter"
authors = ["sandman"]
license = "MIT"
repository = "https://github.com/sandman/grxxt"
readme = "README.md"
keywords = ["greetd", "greeter", "tui", "login"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
greetd_ipc = { version = "0.10", features = ["sync-codec"] }
nix = { version = "0.29", features = ["user", "term"] }
shell-words = "1.1"
chrono = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
ratatui-image = { version = "4.2", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.release]
lto = true
strip = true

[lints.rust]
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
unreachable_patterns = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Restriction lints (cherry-picked)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
exit = "deny"
mem_forget = "deny"
wildcard_enum_match_arm = "deny"
allow_attributes_without_reason = "deny"

# Can't control transitive dependencies
multiple_crate_versions = "allow"
